--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -595,3 +595,18 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+/* Navlink */
+.active {
+  color: orange;
+  text-decoration: none;
+}
+
+.navlink {
+  color: white;
+  text-decoration: none;
+}
+
+.active:hover, .navlink:hover {
+  text-decoration: underline;
+}
